# json-path-comparison

./: .gitignore  ANALYSIS.md  COMPARISON.md  CONTRIBUTING.md  FAQ.md  INTERESTING_QUERIES  OPEN_QUESTIONS.md  QUERY_NAMING_PATTERN.md  README.md  TODO  build.ninja  clean.sh  compare.sh  comparison.html  error_report.sh  go  index.html  results_report.sh  shared.sh  upgrade.sh
bug_reports/: Bash_JSONPath.sh.md  C_json-glib.md  Clojure_json-path.md  Cpp_jsoncons.md  Dart_json_path.md  Elixir_ExJsonPath.md  Elixir_jaxon.md  Elixir_warpath.md  Erlang_ejsonpath.md  FSharp_FSharp.Data.JsonPath.md  Golang_github.com-PaesslerAG-jsonpath.md  Golang_github.com-bhmj-jsonslice.md  Golang_github.com-ohler55-ojg.md  Golang_github.com-oliveagle-jsonpath.md  Golang_github.com-spyzhov-ajson.md  Golang_github.com-theory-jsonpath.md  Golang_github.com-vmware-labs-yaml-jsonpath.md  Haskell_jsonpath.md  JavaScript_Goessner.md  JavaScript_brunerd.md  JavaScript_json-p3.md  JavaScript_jsonpath-plus.md  JavaScript_jsonpath.md  JavaScript_jsonpathly.md  JavaScript_swaggerexpert-jsonpath.md  Java_com.github.jsurfer.md  Java_com.github.xmljacquard.ajp.md  Java_com.jayway.jsonpath.md  Kotlin_com.nfeld.jsonpathkt.md  Kotlin_com.nfeld.jsonpathlite.md  Objective-C_SMJJSONPath.md  PHP_Goessner.md  PHP_flow-jsonpath.md  PHP_galbar-jsonpath.md  PHP_remorhaz-jsonpath.md  PHP_softcreatr-jsonpath.md  Perl_JSON-Path.md  Postgres_SQL-JSON-Path.md  Python_jsonpath-ng.md  Python_jsonpath-rw.md  (+30 more)
comparison/: README.md  errors.md  (+9 more)
implementations/Haskell_jsonpath/: .gitignore  LINK  build.ninja  cabal.project  cabal.project.freeze  install.sh  json-path-comparison.cabal  run.sh  upgrade.sh
implementations/Haskell_jsonpath/app/: Main.hs
(+1385 files in other folders)
