cabal-version: 1.12

name:           json-path-comparison
version:        0.1.0.0
homepage:       https://github.com/cburgmer/json-path-comparison#readme
bug-reports:    https://github.com/cburgmer/json-path-comparison/issues
author:         Akshay Mankar
maintainer:     itsakshaymankar@gmail.com
copyright:      Akshay Mankar
license:        GPLv3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cburgmer/json-path-comparison

executable json-path-comparison
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , jsonpath
    , text
  default-language: Haskell2010
